--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.4.7",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "expo": "~53.0.22",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "^20.0.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
