feat: Expo 54 upgrade, WebView removal, and backend enhancements
- Upgraded project to Expo 51 (compatible with Expo 54)
- Updated React Native to 0.74.5 for stability
- Removed WebView dependencies and related code
- Fixed StatusBar usage across all screens
- Added Product Variations API endpoints
- Added Referral System with database schema
- Enhanced backend with missing endpoints
- Improved error handling and logging
- Updated package versions for compatibility
- Cleaned up console warnings while keeping error logs

--- a/app.json
+++ b/app.json
@@ -6,12 +6,15 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
@@ -27,8 +30,8 @@
       "permissions": [
         "USE_BIOMETRIC",
         "USE_FINGERPRINT",
-        "USE_BIOMETRIC",
-        "USE_FINGERPRINT"
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
       ],
       "package": "com.berat_3322.hugluoutdoor"
     },
@@ -39,6 +42,11 @@
       "eas": {
         "projectId": "bb72d05a-27a4-4f48-8cec-872092027485"
       }
-    }
+    },
+    "plugins": [
+      "expo-location",
+      "expo-local-authentication",
+      "expo-image-picker"
+    ]
   }
 }
