--- a/package.json
+++ b/package.json
@@ -3,43 +3,49 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start --offline",
-    "start-online": "expo start",
+    "start": "expo start",
+    "start-offline": "expo start --offline",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^7.4.6",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/stack": "^7.4.7",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
-    "expo": "~53.0.22",
-    "expo-image-picker": "^16.1.4",
-    "expo-linear-gradient": "^14.1.5",
-    "expo-local-authentication": "^16.0.5",
-    "expo-secure-store": "^14.1.5",
-    "expo-sqlite": "^15.2.14",
-    "expo-status-bar": "~2.2.3",
+    "expo": "~51.0.0",
+    "expo-asset": "~10.0.0",
+    "expo-clipboard": "~6.0.0",
+    "expo-image-picker": "~15.0.0",
+    "expo-linear-gradient": "~13.0.0",
+    "expo-local-authentication": "~14.0.0",
+    "expo-location": "~17.0.0",
+    "expo-secure-store": "~12.0.0",
+    "expo-sqlite": "~13.0.0",
+    "expo-status-bar": "~1.12.0",
     "express": "^5.1.0",
-    "lottie-react-native": "^7.3.4",
-    "react": "19.0.0",
-    "react-native": "^0.79.5",
-    "react-native-gesture-handler": "^2.28.0",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.11.1",
+    "lottie-react-native": "~7.0.0",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.0",
+    "react-native-reanimated": "~3.10.0",
+    "react-native-safe-area-context": "4.10.0",
+    "react-native-screens": "~3.34.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-worklets-core": "1.6.2",
     "react-native-xml2js": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "^20.0.1",
     "@types/crypto-js": "^4.2.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.3.12",
+    "babel-preset-expo": "~11.0.0",
     "typescript": "~5.8.3"
   },
   "private": true
