Fix Android Gradle build issues - Downgrade Gradle from 8.13 to 7.5 for compatibility - Set Android Gradle Plugin to 7.4.2 - Fix expo-module-gradle-plugin compatibility issues

--- a/app.json
+++ b/app.json
@@ -46,7 +46,8 @@
     "plugins": [
       "expo-location",
       "expo-local-authentication",
-      "expo-image-picker"
+      "expo-image-picker",
+      "expo-secure-store"
     ]
   }
 }
