--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -21,21 +21,21 @@
     "expo": "~51.0.0",
     "expo-asset": "~10.0.0",
     "expo-clipboard": "~6.0.0",
-    "expo-image-picker": "~15.0.0",
+    "expo-image-picker": "~15.1.0",
     "expo-linear-gradient": "~13.0.0",
     "expo-local-authentication": "~14.0.0",
     "expo-location": "~17.0.0",
-    "expo-secure-store": "~12.0.0",
-    "expo-sqlite": "~13.0.0",
+    "expo-secure-store": "~13.0.2",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.0",
     "express": "^5.1.0",
-    "lottie-react-native": "~7.0.0",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.0",
     "react-native-reanimated": "~3.10.0",
-    "react-native-safe-area-context": "4.10.0",
-    "react-native-screens": "~3.34.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets-core": "1.6.2",
     "react-native-xml2js": "^1.0.3"
@@ -44,9 +44,9 @@
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "^20.0.1",
     "@types/crypto-js": "^4.2.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~18.2.79",
     "babel-preset-expo": "~11.0.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
