--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-status-bar": "~1.12.0",
     "express": "^5.1.0",
     "lottie-react-native": "6.7.0",
+    "metro": "^0.80.12",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.0",
