API sistemleri ayrıldı - Admin ve App API server'ları
 Yeni Mimari:
- Admin Server (Port 3001): Admin paneli için yönetim API'leri
- App API Server (Port 3000): Mobil uygulama için genel API'ler

 Özellikler:
- Ayrı güvenlik katmanları (Admin key vs Tenant auth)
- Farklı CORS ayarları
- Ayrı rate limiting
- Ortak veritabanı kullanımı
- Middleware ayrımı

 Frontend Güncellemeleri:
- Admin panel  Admin Server (3001)
- Mobil uygulama  App API Server (3000)

 Çalıştırma:
- npm run start:both (her iki server)
- npm run start:admin (sadece admin)
- npm run start:app (sadece app API)

 Dokümantasyon:
- README-SEPARATED.md eklendi
- API endpoint'leri detaylandırıldı
- Deployment rehberi eklendi

--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,14 @@
   "scripts": {
     "start": "node server.js",
     "start:prod": "NODE_ENV=production node server-production.js",
+    "start:admin": "node admin-server.js",
+    "start:app": "node app-api-server.js",
+    "start:both": "concurrently \"npm run start:admin\" \"npm run start:app\"",
     "dev": "nodemon server.js",
     "dev:prod": "nodemon server-production.js",
+    "dev:admin": "nodemon admin-server.js",
+    "dev:app": "nodemon app-api-server.js",
+    "dev:both": "concurrently \"npm run dev:admin\" \"npm run dev:app\"",
     "migrate": "node migrate-to-multi-tenant.js",
     "install:prod": "npm install --production",
     "test": "node test-server.js",
@@ -21,6 +27,7 @@
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
